<resources>
    <string name="app_name">Event Planner</string>
    <string name="action_settings">Settings</string>
    <string name="event_adder_str">Add New Event</string>
    <string name="event_create_str">Event Create</string>
    <string name="event_edit_str">Event Edit</string>
    <string name="event_name">Event Name</string>
    <string name="weather_temp">%1$s °C</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="card_event_transition_name">Transition Name for Card</string>
    <string name="cancel">Cancel</string>
    <string name="content_description_cancel">Cancel operation</string>
    <string name="done">Done</string>
    <string name="content_description_done">Done operation</string>
    <string name="event_description">Event Description</string>
    <string name="pick_date">Event Date</string>
    <string name="event_city_name">Choose City</string>
    <string name="event_address_line">Address Line</string>
    <string name="content_description_search_icon">Search Icon</string>
    <string name="event_description_header">Description</string>
    <string name="delete">Delete Event</string>
    <string name="delete_description">Delete button</string>
    <string name="edit">Edit Event</string>
    <string name="edit_description">Edit button</string>
    <string name="passed">PASSED</string>
    <string name="coming_chip">Coming</string>
    <string name="visited_chip">Visited</string>
    <string name="missed_chip">Missed</string>
    <string name="missed_label">Missed</string>
    <string name="visited_label">Visited</string>
    <string name="coming_label">Coming</string>
    <string name="no_network_connection">No network connection</string>
    <string name="field_is_empty">Field is empty</string>


</resources>