<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.eventAdding.EventAddingFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/event_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:layout_margin="10dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
        app:layout_constraintTop_toBottomOf="@+id/event_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_city_name"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/baseline_search_black_24dp"
        app:startIconContentDescription="@string/content_description_search_icon"
        app:layout_constraintTop_toBottomOf="@+id/date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text"
            tools:text="@string/event_city_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_address_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_address_line"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_city_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/event_address_line"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_address_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/event_description"/>

    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>