<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_event"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:transitionName="@{string/card_event_transition_name(event.id)}"
    app:strokeColor="?attr/colorSecondary"
    app:strokeWidth="1dp"
    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
    app:cardCornerRadius="12dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/event_name"
            style="@style/Theme.EventPlanner.TextView.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/event_name" />


        <TextView
            android:id="@+id/event_place"
            style="@style/Theme.EventPlanner.TextView.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/chipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
            tools:text="@tools:sample/cities" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/weather_icon" />

        <TextView
            android:id="@+id/weather_temp"
            style="@style/Theme.EventPlanner.TextView.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/chipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
            tools:text="@string/weather_temp" />


        <TextView
            android:id="@+id/event_date"
            style="@style/Theme.EventPlanner.TextView.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
            app:layout_constraintEnd_toStartOf="@+id/weather_temp"
            app:layout_constraintBottom_toTopOf="@+id/chipGroup"
            tools:text="@tools:sample/date/ddmmyy" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@+id/coming_chip"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/coming_chip"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coming_chip"
                app:chipIconVisible="true"
                app:chipIcon="@drawable/baseline_alarm_black_24dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/visited_chip"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visited_chip"
                app:chipIconVisible="true"
                app:chipIcon="@drawable/baseline_done_black_24dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/missed_chip"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missed_chip"
                app:chipIconVisible="true"
                app:chipIcon="@drawable/baseline_close_black_24dp"/>
        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>